changement de main.scss : ajout des imports, ajout de box sizing dans base.scss, ajout propriétés du logo dans header, correction orthographe de functions.css

--- a/main.css
+++ b/main.css
@@ -1,13 +1,10 @@
-body {
-  background-color: #fff;
+* {
+  box-sizing: border-box;
 }
 
-header {
-  display: flex;
-}
-
-container {
-  color: blue;
+.logo {
+  text-align: center;
+  font-family: "Shrikhand";
 }
 
 /*# sourceMappingURL=main.css.map */
