suppression du lien normalize dans head avec changement de structure et classes dans home_page.html : presentation, functionning-container, functionning-explain, container-restaurant, restaurant, et card; ajout mini reset et style des ancres dans _base; ajout typo dans _typography; ajout style button dans _components; précisions sur le font du logo dans _header ; insertion des styles pour presentation et functioning dans _home_page; ajout des variables couleurs et margin dans _variable

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,4 +1,6 @@
 .logo {
+    font-size: 2rem;
     text-align:center;
-    font-family:'Shrikhand';
+    font-family:'Shrikhand','Robot', sans-serif;
+    margin:$margin-elements;
 }
