--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,4 +1,6 @@
 $colour-primary : #9356DC;
 $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
+$colour-quartery:rgba(128, 128, 128, 0.295);
 $colour-text :white;
+$margin-elements : 1rem 1rem 1rem 1rem;
