--- a/main.css
+++ b/main.css
@@ -1,10 +1,166 @@
-* {
+/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
+html, body, p, ol, ul, li, dl, dt, dd, blockquote, figure, fieldset, legend, textarea, pre, iframe, hr, h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-size: 100%;
+  font-weight: normal;
+}
+
+ul {
+  list-style: none;
+}
+
+button, input, select {
+  margin: 0;
+}
+
+html {
   box-sizing: border-box;
 }
 
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+img, video {
+  height: auto;
+  max-width: 100%;
+}
+
+iframe {
+  border: 0;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+td, th {
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+h2 {
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+.nav__logo {
+  font-family: "Shrikhand", "Roboto", sans-serif;
+}
+
+.button {
+  display: inline-block;
+  width: auto;
+  margin: 1rem 1rem 1rem 1rem;
+}
+.button__style {
+  font-size: 1rem;
+  color: white;
+  background: linear-gradient(to top, #9356DC, #FF79DA);
+  cursor: pointer;
+}
+.button__style--size {
+  height: 40px;
+}
+.button__style--border {
+  border-radius: 45px 45px;
+  border: none;
+  box-shadow: 0 1rem 4rem rgb(68, 65, 65);
+}
+
 .logo {
+  font-size: 2rem;
   text-align: center;
-  font-family: "Shrikhand";
+  font-family: "Shrikhand", "Robot", sans-serif;
+  margin: 1rem 1rem 1rem 1rem;
+}
+
+.presentation {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
+}
+.presentation__location {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  margin: 0 0 1rem 0;
+  padding: 1rem;
+  font-weight: 700;
+  background-color: rgb(252, 246, 246);
+  border-top: solid 2px rgba(160, 157, 157, 0.849);
+  box-shadow: 0 1rem 2rem rgb(187, 183, 183) inset, 0 5px 5px rgb(187, 183, 183) inset;
+}
+.presentation__heading {
+  margin: 1rem 1rem 1rem 1rem;
+  font-weight: 900;
+  font-size: 1.6rem;
+}
+.presentation__discover {
+  margin: 1rem 1rem 1rem 1rem;
+  font-size: 1.2em;
+  font-weight: 300;
+}
+
+.functioning {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.functioning__heading {
+  margin: 1rem 1rem 1rem 1rem;
+}
+.functioning__container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.functioning__explain {
+  width: 90%;
+  height: 4rem;
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 2rem;
+  margin: 1rem 1rem 1rem 1rem;
+  border-radius: 15px 15px 15px 15px;
+  box-shadow: 1rem 1rem 1rem #959595, 0 0 0.5rem #959595;
+}
+.functioning__explain .number {
+  display: inline-block;
+  position: relative;
+  right: 0.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: #9356DC;
+  border-radius: 50%;
+  text-align: center;
+  font-weight: 700;
+}
+.functioning__explain .fa-solid {
+  opacity: 0.5;
 }
 
 /*# sourceMappingURL=main.css.map */
