modifications structure et class html : suppression doublon class border dans button, ancres des cartes mises à l'extérieur pour englober la carte, modification et ajout des class dans les cartes, bouton "nouveau" déplacé après card-body, rectification de l'emplacement du titre du footer; modification de _button : ajout padding, style-size, border avec insertion mixin sahdow; modification de _home_page : ajout margin-bottom dans presentation, suppression margin dans son heading, modifications  dans functioning  : width, margin, insertion mixin shadow, ajustement de l'emplacement des icones (avec ajout opacity) et des nombres; dans _mixins : ajout mixin shadow; dans _variables : ajout des variables pour shadow, margin-elements et border card.

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,19 +1,23 @@
-.button{
+.button {
     display: inline-block;
-    width:auto;
-    margin:$margin-elements;
+    width: auto;
+    margin: $margin-elements;
 
-    &__style{
-      font-size: 1rem;
-       color: $colour-text;
-     
-    background: linear-gradient(to top, $colour-primary, $colour-secondary);  
-    cursor: pointer;}
-     &__style--size{ 
-        height: 40px;}
-    &__style--border{
+    &__style {
+        font-size: 1rem;
+        color: $colour-text;
+        padding: 1rem 1rem 1rem 1rem;
+        background: linear-gradient(to top, $colour-primary, $colour-secondary);
+        cursor: pointer;
+    }
+
+    &__style--size {
+        height: 3rem;
+    }
+
+    &__style--border {
         border-radius: 45px 45px;
-        border:none;
-    box-shadow: 0 1rem 4rem rgb(68, 65, 65);}
-
+        border: none;
+        @include initial-shadow-element;
+    }
 }
