--- a/main.css
+++ b/main.css
@@ -69,16 +69,17 @@ body {
 .button__style {
   font-size: 1rem;
   color: white;
+  padding: 1rem 1rem 1rem 1rem;
   background: linear-gradient(to top, #9356DC, #FF79DA);
   cursor: pointer;
 }
 .button__style--size {
-  height: 40px;
+  height: 3rem;
 }
 .button__style--border {
   border-radius: 45px 45px;
   border: none;
-  box-shadow: 0 1rem 4rem rgb(68, 65, 65);
+  box-shadow: 0.125rem 0.125rem 0.5rem #c7c3c3;
 }
 
 .logo {
@@ -93,6 +94,7 @@ body {
   flex-direction: column;
   width: 100%;
   text-align: center;
+  margin-bottom: 5rem;
 }
 .presentation__location {
   width: 100%;
@@ -109,7 +111,6 @@ body {
   box-shadow: 0 1rem 2rem rgb(187, 183, 183) inset, 0 5px 5px rgb(187, 183, 183) inset;
 }
 .presentation__heading {
-  margin: 1rem 1rem 1rem 1rem;
   font-weight: 900;
   font-size: 1.6rem;
 }
@@ -120,30 +121,29 @@ body {
 }
 
 .functioning {
-  width: 100%;
+  width: auto;
   display: flex;
   flex-direction: column;
-}
-.functioning__heading {
-  margin: 1rem 1rem 1rem 1rem;
+  margin: 1rem 1rem 5rem 1rem;
 }
 .functioning__container {
-  width: 100%;
+  width: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 1rem 0 1rem 1rem;
 }
 .functioning__explain {
-  width: 90%;
+  width: 100%;
   height: 4rem;
+  border-radius: 15px 15px 15px 15px;
   position: relative;
   display: flex;
-  justify-content: flex-start;
   align-items: center;
-  gap: 2rem;
-  margin: 1rem 1rem 1rem 1rem;
-  border-radius: 15px 15px 15px 15px;
-  box-shadow: 1rem 1rem 1rem #959595, 0 0 0.5rem #959595;
+  gap: 1rem;
+  margin: 1rem 0 1rem 0;
+  box-shadow: 0.125rem 0.125rem 0.5rem #c7c3c3;
+  font-weight: 700;
 }
 .functioning__explain .number {
   display: inline-block;
@@ -160,7 +160,36 @@ body {
   font-weight: 700;
 }
 .functioning__explain .fa-solid {
+  position: relative;
+  right: 0.5rem;
   opacity: 0.5;
+}
+
+.container-restaurant {
+  width: 100%;
+  height: auto;
+  margin: 1rem 1rem 1rem 1rem;
+}
+.container-restaurant__heading {
+  width: 100%;
+  margin: 1rem 1rem 1rem 0;
+}
+
+.nav {
+  margin: 1rem 1rem 1rem 1rem;
+}
+.nav__logo {
+  margin: 1rem 0 1rem 0;
+}
+.nav__link {
+  position: relative;
+  left: 1rem;
+}
+.nav__link .fa-solid {
+  position: relative;
+  right: 1rem;
+  width: 1rem;
+  height: 1rem;
 }
 
 /*# sourceMappingURL=main.css.map */
