--- a/sass/pages/_home_page.scss
+++ b/sass/pages/_home_page.scss
@@ -1,78 +1,114 @@
-.presentation{
-    display:flex;
+.presentation {
+    display: flex;
     flex-direction: column;
-    width:100%;
+    width: 100%;
     text-align: center;
+    margin-bottom: 5rem;
 
-&__location {
-    width:100%;
-    display:flex;
-    flex-direction: row;
-    justify-content:center;
-    align-items: center;
-    gap:1rem;
-    margin: 0  0 1rem 0 ;
-    padding: 1rem;
-    font-weight: 700;
-    background-color: rgb(252, 246, 246);
-    border-top: solid 2px rgba(160, 157, 157, 0.849);
-    box-shadow: 0 1rem 2rem rgb(187, 183, 183) inset , 0 5px 5px rgb(187, 183, 183) inset;
-}
- &__heading{
-    margin:$margin-elements;
-    font-weight: 900;
-    font-size:1.6rem;
- }
-&__discover{ 
-    margin:$margin-elements;
-    font-size: 1.2em;
-    font-weight: 300;
-}
-}
-.functioning{
-width: 100%;
-display: flex;
-flex-direction: column;
+    &__location {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        margin: 0 0 1rem 0;
+        padding: 1rem;
+        font-weight: 700;
+        background-color: rgb(252, 246, 246);
+        border-top: solid 2px rgba(160, 157, 157, 0.849);
+        box-shadow: 0 1rem 2rem rgb(187, 183, 183) inset, 0 5px 5px rgb(187, 183, 183) inset;
+    }
 
-&__heading{
-    margin:$margin-elements;
+    &__heading {
+
+        font-weight: 900;
+        font-size: 1.6rem;
+    }
+
+    &__discover {
+        margin: $margin-elements;
+        font-size: 1.2em;
+        font-weight: 300;
+    }
 }
-&__container{
-    width:100%;
-    display:flex;
+
+.functioning {
+    width: auto;
+    display: flex;
     flex-direction: column;
-   align-items: center;
-}
-&__explain{
-width:90%;
-height:4rem;
-position : relative;  
-display: flex;
-justify-content:flex-start;
-align-items: center;
-gap: 2rem;
- margin:$margin-elements;
- border-radius: 15px 15px 15px 15px;
- box-shadow: 1rem 1rem 1rem #959595, 0 0 0.5rem #959595;
-}
-&__explain .number{
-display: inline-block;
-position:relative;
- right: 0.8rem;
- display:flex;
- justify-content:center;
- align-items: center;
-width: 1.5rem;
-height: 1.5rem;
-background-color: $colour-primary;
-border-radius:50%;
-text-align: center;
-font-weight: 700 ;
+    margin: 1rem 1rem 5rem 1rem;
+
+    &__container {
+        width: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 1rem 0 1rem 1rem;
+    }
+
+    &__explain {
+        width: 100%;
+        height: 4rem;
+        border-radius: 15px 15px 15px 15px;
+        position: relative;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        margin: 1rem 0 1rem 0;
+        @include initial-shadow-element;
+        font-weight: 700;
+    }
+
+    &__explain .number {
+        display: inline-block;
+        position: relative;
+        right: 0.8rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 1.5rem;
+        height: 1.5rem;
+        background-color: $colour-primary;
+        border-radius: 50%;
+        text-align: center;
+        font-weight: 700;
+    }
+
+    &__explain .fa-solid {
+        position: relative;
+        right: 0.5rem;
+        opacity: (0.5);
+    }
 }
 
-&__explain .fa-solid {    
-    opacity:(0.5);
+.container-restaurant {
+    width: 100%;
+    height: auto;
+    margin: $margin-elements;
+    &__heading {
+        width: 100%;
+        margin: 1rem 1rem 1rem 0;
+    }
 }
+ 
+ 
+
+.nav {
+    margin: $margin-elements;
+
+    &__logo {
+        margin: 1rem 0 1rem 0;
+    }
+    &__link {
+    position: relative;
+    left:1rem;
+    }
+    &__link .fa-solid{
+        position: relative;
+        right:1rem;
+        width: 1rem;
+        height:1rem;
+         
+    }
 }
-
-
