--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,4 +3,8 @@ $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
 $colour-quartery:rgba(128, 128, 128, 0.295);
 $colour-text :white;
+$shadow-size: 0.125rem 0.125rem;
+$shadow-blur-effect: 0.5rem;
+$colour-shadow: #c7c3c3;
 $margin-elements : 1rem 1rem 1rem 1rem;
+$border-card: 15px 15px 15px 15px;
