--- a/main.css
+++ b/main.css
@@ -82,6 +82,24 @@ body {
   box-shadow: 0.125rem 0.125rem 0.5rem #c7c3c3;
 }
 
+.btn {
+  position: absolute;
+  bottom: 10rem;
+  left: 5rem;
+}
+.btn__new {
+  width: auto;
+  height: auto;
+  margin: 1rem 1rem 1rem 1rem;
+  font-size: 1rem;
+  padding: 1rem 1rem 1rem 1rem;
+  background: #99E2D0;
+  cursor: pointer;
+  height: 2rem;
+  border-radius: 5px 5px 5px 5px;
+  border: none;
+}
+
 .logo {
   font-size: 2rem;
   text-align: center;
@@ -89,10 +107,17 @@ body {
   margin: 1rem 1rem 1rem 1rem;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .presentation {
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: auto;
   text-align: center;
   margin-bottom: 5rem;
 }
@@ -122,6 +147,7 @@ body {
 
 .functioning {
   width: auto;
+  height: auto;
   display: flex;
   flex-direction: column;
   margin: 1rem 1rem 5rem 1rem;
@@ -166,30 +192,96 @@ body {
 }
 
 .container-restaurant {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: auto;
   height: auto;
-  margin: 1rem 1rem 1rem 1rem;
+  margin: 1rem 1rem 4rem 1rem;
+  gap: 2rem;
 }
 .container-restaurant__heading {
   width: 100%;
-  margin: 1rem 1rem 1rem 0;
+  height: auto;
+}
+
+.restaurant-link {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  height: 300px;
+  border-radius: 20px 20px 20px 20px;
+}
+.restaurant-link__card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: 300px;
+  border-radius: 20px 20px 20px 20px;
+  margin-bottom: 1rem;
+  box-shadow: 0.125rem 0.125rem 0.5rem #c7c3c3;
+}
+.restaurant-link__container-img {
+  position: relative;
+  border-radius: 20px 20px 0 0;
+  width: 100%;
+  height: 250px;
+  overflow: hidden;
+}
+.restaurant-link__img {
+  position: absolute;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px 20px 0 0;
+}
+.restaurant-link__body {
+  width: 100%;
+  height: 50px;
+  border-radius: 0 0 20px 20px;
+}
+.restaurant-link__icon--before {
+  position: absolute;
+  bottom: 5rem;
+}
+
+footer {
+  background-color: rgba(24, 23, 23, 0.863);
+  padding: 1rem 0 1rem 0;
 }
 
 .nav {
+  color: white;
   margin: 1rem 1rem 1rem 1rem;
+  line-height: 2rem;
 }
 .nav__logo {
   margin: 1rem 0 1rem 0;
+  font-weight: 300;
 }
-.nav__link {
+.nav__link-icon {
+  display: inline-block;
   position: relative;
+  top: 0.5rem;
   left: 1rem;
+  height: 1rem;
 }
-.nav__link .fa-solid {
-  position: relative;
-  right: 1rem;
+.nav__link-icon .fa-utensils {
+  position: absolute;
+  left: -1rem;
   width: 1rem;
   height: 1rem;
+}
+.nav__link-icon .fa-handshake-angle {
+  position: absolute;
+  top: 0.5rem;
+  left: -1rem;
+  width: 1rem;
+  height: 1rem;
+}
+.nav__link--color {
+  color: white;
 }
 
 /*# sourceMappingURL=main.css.map */
