--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,11 +7,11 @@
 @import "./base/typography";
 
 @import "./components/button";
+@import "./components/btn";
 
 @import "./layout/header";
-@import "./layout/nav";
 @import "./layout/container";
- 
 
 @import "./pages/home_page";
 @import "./pages/menu";
+@import "./layout/nav";
