--- a/sass/pages/_home_page.scss
+++ b/sass/pages/_home_page.scss
@@ -1,7 +1,14 @@
+main {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .presentation {
     display: flex;
     flex-direction: column;
     width: 100%;
+    height:auto;
     text-align: center;
     margin-bottom: 5rem;
 
@@ -35,6 +42,7 @@
 
 .functioning {
     width: auto;
+    height:auto;
     display: flex;
     flex-direction: column;
     margin: 1rem 1rem 5rem 1rem;
@@ -50,7 +58,7 @@
     &__explain {
         width: 100%;
         height: 4rem;
-        border-radius: 15px 15px 15px 15px;
+        border-radius: $border-selector;
         position: relative;
         display: flex;
         align-items: center;
@@ -83,32 +91,65 @@
 }
 
 .container-restaurant {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: auto;
     height: auto;
-    margin: $margin-elements;
+    margin: 1rem 1rem 4rem 1rem;
+    gap:2rem;
+
     &__heading {
         width: 100%;
-        margin: 1rem 1rem 1rem 0;
+        height: auto;
     }
 }
- 
- 
 
-.nav {
-    margin: $margin-elements;
-
-    &__logo {
-        margin: 1rem 0 1rem 0;
-    }
-    &__link {
+.restaurant-link {
+    display: inline-block;
     position: relative;
-    left:1rem;
+    width: 100%;
+    height: 300px;
+    border-radius:$border-card;
+     
+    &__card {
+        position:relative;
+        display: flex;
+        flex-direction: column;
+        width: auto;
+         height: 300px;
+        border-radius: $border-card;
+        margin-bottom: 1rem;
+        @include initial-shadow-element;
     }
-    &__link .fa-solid{
-        position: relative;
-        right:1rem;
-        width: 1rem;
-        height:1rem;
-         
+
+    &__container-img {
+        position:relative;
+        border-radius:  20px 20px 0 0;
+        width: 100%;
+       height: 250px;
+        overflow: hidden;
     }
+&__img{
+    position:absolute;
+    object-fit:cover;
+    width: 100%;
+    height:100%;
+    border-radius:  20px 20px 0 0;
 }
+
+        &__body {
+            width: 100%;
+            height: 50px;
+            border-radius: 0 0 20px 20px; 
+        }
+       
+        &__icon--before {
+            position:absolute;
+            bottom:5rem;
+        }
+    }
+
+    
+
+  
