--- a/main.css
+++ b/main.css
@@ -70,33 +70,37 @@ body {
   font-size: 1rem;
   color: white;
   padding: 1rem 1rem 1rem 1rem;
-  background: linear-gradient(to top, #9356DC, #FF79DA);
+  background: linear-gradient(to bottom, #9356DC, #FF79DA);
   cursor: pointer;
-}
-.button__style--size {
   height: 3rem;
-}
-.button__style--border {
   border-radius: 45px 45px;
   border: none;
   box-shadow: 0.125rem 0.125rem 0.5rem #c7c3c3;
+  transform: scale(1);
+  transition: all 300ms;
+  transition: transform 500ms ease-in-out;
+}
+.button__style:hover {
+  transform: scale(1.2, 1.1);
+  opacity: 0.9;
+  background: linear-gradient(to top, #9356DC, #FF79DA);
+  box-shadow: 0.2rem 0.5rem #c7c3c3;
 }
 
 .btn {
   position: absolute;
-  bottom: 10rem;
-  left: 5rem;
+  top: 0.5rem;
+  right: 1rem;
 }
 .btn__new {
-  width: auto;
+  width: 90%;
   height: auto;
   margin: 1rem 1rem 1rem 1rem;
   font-size: 1rem;
-  padding: 1rem 1rem 1rem 1rem;
   background: #99E2D0;
   cursor: pointer;
   height: 2rem;
-  border-radius: 5px 5px 5px 5px;
+  border-radius: 3px 3px 3px 3px;
   border: none;
 }
 
@@ -162,7 +166,7 @@ main {
 .functioning__explain {
   width: 100%;
   height: 4rem;
-  border-radius: 15px 15px 15px 15px;
+  border-radius: 0.938rem 0.938rem 0.938rem 0.938rem;
   position: relative;
   display: flex;
   align-items: center;
@@ -210,7 +214,7 @@ main {
   position: relative;
   width: 100%;
   height: 300px;
-  border-radius: 20px 20px 20px 20px;
+  border-radius: 1.25rem 1.25rem 1.25rem 1.25rem;
 }
 .restaurant-link__card {
   position: relative;
@@ -218,7 +222,7 @@ main {
   flex-direction: column;
   width: auto;
   height: 300px;
-  border-radius: 20px 20px 20px 20px;
+  border-radius: 1.25rem 1.25rem 1.25rem 1.25rem;
   margin-bottom: 1rem;
   box-shadow: 0.125rem 0.125rem 0.5rem #c7c3c3;
 }
@@ -243,7 +247,13 @@ main {
 }
 .restaurant-link__icon--before {
   position: absolute;
-  bottom: 5rem;
+  right: 2rem;
+  bottom: 1.2rem;
+}
+.restaurant-link__icon--after {
+  position: absolute;
+  right: 2rem;
+  bottom: 1.2rem;
 }
 
 footer {
@@ -263,20 +273,20 @@ footer {
 .nav__link-icon {
   display: inline-block;
   position: relative;
-  top: 0.5rem;
-  left: 1rem;
-  height: 1rem;
+  left: 1.5rem;
+  line-height: 1rem;
 }
 .nav__link-icon .fa-utensils {
   position: absolute;
-  left: -1rem;
+  bottom: 0.2rem;
+  left: -1.5rem;
   width: 1rem;
   height: 1rem;
 }
 .nav__link-icon .fa-handshake-angle {
   position: absolute;
-  top: 0.5rem;
-  left: -1rem;
+  top: 0.438rem;
+  left: -1.5rem;
   width: 1rem;
   height: 1rem;
 }
