--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -1,19 +1,19 @@
 .btn{
 position:absolute;
-bottom: 10rem;
-left:5rem;
+top: 0.5rem;
+right:1rem;
 
 &__new{
    
-   width: auto;
+   width: 90%;
    height:auto;
    margin: $margin-elements;
     font-size: 1rem;
-    padding: 1rem 1rem 1rem 1rem;
+     
     background: $colour-tertiary;
     cursor: pointer;
     height: 2rem;
-    border-radius: 5px 5px 5px 5px;
+    border-radius: 3px 3px 3px 3px;
     border: none;
 }
 }
