--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -7,17 +7,22 @@
         font-size: 1rem;
         color: $colour-text;
         padding: 1rem 1rem 1rem 1rem;
-        background: linear-gradient(to top, $colour-primary, $colour-secondary);
+        background: linear-gradient(to bottom, $colour-primary, $colour-secondary);
         cursor: pointer;
-    }
-
-    &__style--size {
         height: 3rem;
-    }
-
-    &__style--border {
         border-radius: 45px 45px;
         border: none;
         @include initial-shadow-element;
+        transform: scale(1);
+        transition: all 300ms;
+        transition: transform 500ms ease-in-out;
+
+        &:hover {
+            transform: scale(1.2, 1.1);
+            opacity: 0.9;   
+            background: linear-gradient(to top, $colour-primary, $colour-secondary);
+            @include initial-shadow-element (0.2rem);
+        }
     }
+
 }
