--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,7 +1,6 @@
 footer {
     background-color: $colour-quartery;
     padding: 1rem 0 1rem 0;
-
 }
 
 .nav {
@@ -17,30 +16,27 @@ footer {
     &__link-icon {
         display: inline-block;
         position: relative;
-        top:0.5rem;
-       left:1rem;
-        height: 1rem;
+        left: 1.5rem;
+        line-height: 1rem;
     }
 
     &__link-icon .fa-utensils {
         position: absolute;
-         
-       left:-1rem;
-        width: 1rem;
-        height: 1rem;
-    }
-    &__link-icon .fa-handshake-angle {
-        position: absolute;
-        top:0.5rem;
-       left:-1rem;
+        bottom: 0.2rem;
+        left: -1.5rem;
         width: 1rem;
         height: 1rem;
     }
 
+    &__link-icon .fa-handshake-angle {
+        position: absolute;
+        top: 0.438rem;
+        left: -1.5rem;
+        width: 1rem;
+        height: 1rem;
+    }
 
     &__link--color {
         color: white;
     }
-
-
 }
