--- a/sass/pages/_home_page.scss
+++ b/sass/pages/_home_page.scss
@@ -1,5 +1,5 @@
 main {
-    display:flex;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -8,7 +8,7 @@ main {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height:auto;
+    height: auto;
     text-align: center;
     margin-bottom: 5rem;
 
@@ -42,7 +42,7 @@ main {
 
 .functioning {
     width: auto;
-    height:auto;
+    height: auto;
     display: flex;
     flex-direction: column;
     margin: 1rem 1rem 5rem 1rem;
@@ -97,7 +97,7 @@ main {
     width: auto;
     height: auto;
     margin: 1rem 1rem 4rem 1rem;
-    gap:2rem;
+    gap: 2rem;
 
     &__heading {
         width: 100%;
@@ -110,46 +110,50 @@ main {
     position: relative;
     width: 100%;
     height: 300px;
-    border-radius:$border-card;
-     
+    border-radius: $border-card;
+
     &__card {
-        position:relative;
+        position: relative;
         display: flex;
         flex-direction: column;
         width: auto;
-         height: 300px;
+        height: 300px;
         border-radius: $border-card;
         margin-bottom: 1rem;
         @include initial-shadow-element;
     }
 
     &__container-img {
-        position:relative;
-        border-radius:  20px 20px 0 0;
+        position: relative;
+        border-radius: 20px 20px 0 0;
         width: 100%;
-       height: 250px;
+        height: 250px;
         overflow: hidden;
     }
-&__img{
-    position:absolute;
-    object-fit:cover;
-    width: 100%;
-    height:100%;
-    border-radius:  20px 20px 0 0;
-}
 
-        &__body {
-            width: 100%;
-            height: 50px;
-            border-radius: 0 0 20px 20px; 
-        }
-       
-        &__icon--before {
-            position:absolute;
-            bottom:5rem;
-        }
+    &__img {
+        position: absolute;
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        border-radius: 20px 20px 0 0;
     }
 
-    
+    &__body {
+        width: 100%;
+        height: 50px;
+        border-radius: 0 0 20px 20px;
+    }
 
-  
+    &__icon--before {
+        position: absolute;
+        right: 2rem;
+        bottom: 1.2rem;
+    }
+
+    &__icon--after {
+        position: absolute;
+        right: 2rem;
+        bottom: 1.2rem;
+    }
+}
