--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,5 +7,5 @@ $shadow-size: 0.125rem 0.125rem;
 $shadow-blur-effect: 0.5rem;
 $colour-shadow: #c7c3c3;
 $margin-elements : 1rem 1rem 1rem 1rem;
-$border-selector: 15px 15px 15px 15px;
-$border-card : 20px 20px 20px 20px;
+$border-selector: 0.938rem 0.938rem 0.938rem 0.938rem;
+$border-card : 1.25rem 1.25rem 1.25rem 1.25rem;
