--- a/main.css
+++ b/main.css
@@ -100,7 +100,7 @@ body {
   background: #99E2D0;
   cursor: pointer;
   height: 2rem;
-  border-radius: 3px 3px 3px 3px;
+  border-radius: 0.188rem 0.188rem 0.188rem 0.188rem;
   border: none;
 }
 
@@ -272,26 +272,25 @@ footer {
 }
 .nav__link-icon {
   display: inline-block;
+  height: 1rem;
   position: relative;
-  left: 1.5rem;
+  right: 0.5rem;
   line-height: 1rem;
+  padding: 0 1rem 0 1rem;
 }
 .nav__link-icon .fa-utensils {
-  position: absolute;
-  bottom: 0.2rem;
-  left: -1.5rem;
-  width: 1rem;
-  height: 1rem;
+  position: relative;
+  right: 0.5rem;
 }
 .nav__link-icon .fa-handshake-angle {
-  position: absolute;
-  top: 0.438rem;
-  left: -1.5rem;
-  width: 1rem;
-  height: 1rem;
+  position: relative;
+  right: 0.5rem;
 }
 .nav__link--color {
   color: white;
+}
+.nav__link--color:hover {
+  color: #FF79DA;
 }
 
 /*# sourceMappingURL=main.css.map */
