--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -13,7 +13,7 @@ right:1rem;
     background: $colour-tertiary;
     cursor: pointer;
     height: 2rem;
-    border-radius: 3px 3px 3px 3px;
+    border-radius: 0.188rem 0.188rem 0.188rem 0.188rem;
     border: none;
 }
 }
