--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -15,28 +15,27 @@ footer {
 
     &__link-icon {
         display: inline-block;
+        height : 1rem;
         position: relative;
-        left: 1.5rem;
+        right : 0.5rem;
         line-height: 1rem;
-    }
+        padding : 0 1rem 0 1rem;
+        }
 
     &__link-icon .fa-utensils {
-        position: absolute;
-        bottom: 0.2rem;
-        left: -1.5rem;
-        width: 1rem;
-        height: 1rem;
+        position: relative;
+        right:0.5rem;
     }
 
     &__link-icon .fa-handshake-angle {
-        position: absolute;
-        top: 0.438rem;
-        left: -1.5rem;
-        width: 1rem;
-        height: 1rem;
+        position: relative;
+        right:0.5rem;
     }
 
     &__link--color {
         color: white;
     }
+    &__link--color:hover{
+        color:$colour-secondary;
+}
 }
