--- a/main.css
+++ b/main.css
@@ -175,6 +175,9 @@ main {
   box-shadow: 0.125rem 0.125rem 0.5rem #c7c3c3;
   font-weight: 700;
 }
+.functioning__explain:hover {
+  background-color: lightgrey;
+}
 .functioning__explain .number {
   display: inline-block;
   position: relative;
@@ -194,6 +197,10 @@ main {
   right: 0.5rem;
   opacity: 0.5;
 }
+.functioning__explain:hover .fa-solid {
+  color: #9356DC;
+  opacity: 1;
+}
 
 .container-restaurant {
   display: flex;
@@ -209,51 +216,76 @@ main {
   height: auto;
 }
 
-.restaurant-link {
-  display: inline-block;
+.restaurant {
   position: relative;
-  width: 100%;
-  height: 300px;
-  border-radius: 1.25rem 1.25rem 1.25rem 1.25rem;
-}
-.restaurant-link__card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
   width: auto;
-  height: 300px;
+  height: 250px;
   border-radius: 1.25rem 1.25rem 1.25rem 1.25rem;
   margin-bottom: 1rem;
+  transform: scale(1);
+  transition: all 300ms;
+  transition: transform 100ms ease-in-out;
+}
+.restaurant:hover {
+  transform: scale(1.02);
   box-shadow: 0.125rem 0.125rem 0.5rem #c7c3c3;
 }
-.restaurant-link__container-img {
-  position: relative;
-  border-radius: 20px 20px 0 0;
+.restaurant__link {
+  display: inline-block;
   width: 100%;
   height: 250px;
+  border-radius: 1.25rem 1.25rem 1.25rem 1.25rem;
+}
+.restaurant__card {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  border-radius: 1.25rem 1.25rem 1.25rem 1.25rem;
+  box-shadow: 0.125rem 0.125rem 0.5rem #c7c3c3;
+}
+.restaurant__container-img {
+  border-radius: 20px 20px 0 0;
+  width: 100%;
+  height: 200px;
   overflow: hidden;
 }
-.restaurant-link__img {
-  position: absolute;
+.restaurant__img {
   object-fit: cover;
   width: 100%;
   height: 100%;
   border-radius: 20px 20px 0 0;
 }
-.restaurant-link__body {
+.restaurant__footer {
   width: 100%;
   height: 50px;
   border-radius: 0 0 20px 20px;
 }
-.restaurant-link__icon--before {
+.restaurant__icon-heart--before {
+  width: auto;
+  display: inline-block;
   position: absolute;
-  right: 2rem;
-  bottom: 1.2rem;
+  z-index: 1;
+  top: 13rem;
+  right: 1rem;
+  border: none;
 }
-.restaurant-link__icon--after {
+.restaurant__icon-heart--after {
+  width: auto;
+  color: transparent;
+  display: inline-block;
   position: absolute;
-  right: 2rem;
-  bottom: 1.2rem;
+  z-index: auto;
+  top: 13rem;
+  right: 1rem;
+  border: none;
+}
+.restaurant__icon-heart--before:hover {
+  display: none;
+}
+.restaurant__icon-heart--after:hover {
+  color: #FF79DA;
+  z-index: 1;
 }
 
 footer {
