--- a/sass/pages/_home_page.scss
+++ b/sass/pages/_home_page.scss
@@ -28,7 +28,6 @@ main {
     }
 
     &__heading {
-
         font-weight: 900;
         font-size: 1.6rem;
     }
@@ -46,6 +45,7 @@ main {
     display: flex;
     flex-direction: column;
     margin: 1rem 1rem 5rem 1rem;
+
 
     &__container {
         width: auto;
@@ -68,6 +68,10 @@ main {
         font-weight: 700;
     }
 
+    &__explain:hover {
+        background-color: lightgrey;
+    }
+
     &__explain .number {
         display: inline-block;
         position: relative;
@@ -88,6 +92,11 @@ main {
         right: 0.5rem;
         opacity: (0.5);
     }
+
+    &__explain:hover .fa-solid {
+        color: $colour-primary;
+        opacity: 1;
+    }
 }
 
 .container-restaurant {
@@ -105,55 +114,84 @@ main {
     }
 }
 
-.restaurant-link {
-    display: inline-block;
+.restaurant {
     position: relative;
-    width: 100%;
-    height: 300px;
+    width: auto;
+    height: 250px;
     border-radius: $border-card;
+    margin-bottom: 1rem;
+    transform: scale(1);
+    transition: all 300ms;
+    transition: transform 100ms ease-in-out;
+
+    &:hover {
+        transform: scale(1.02);
+        @include initial-shadow-element;
+    }
+
+    &__link {
+        display: inline-block;
+        width: 100%;
+        height: 250px;
+        border-radius: $border-card;
+    }
 
     &__card {
-        position: relative;
         display: flex;
         flex-direction: column;
-        width: auto;
-        height: 300px;
+        width: 100%;
+        height: 100%;
         border-radius: $border-card;
-        margin-bottom: 1rem;
         @include initial-shadow-element;
     }
 
     &__container-img {
-        position: relative;
         border-radius: 20px 20px 0 0;
         width: 100%;
-        height: 250px;
+        height: 200px;
         overflow: hidden;
     }
 
     &__img {
-        position: absolute;
         object-fit: cover;
         width: 100%;
         height: 100%;
         border-radius: 20px 20px 0 0;
     }
 
-    &__body {
+    &__footer {
         width: 100%;
         height: 50px;
         border-radius: 0 0 20px 20px;
     }
 
-    &__icon--before {
+    &__icon-heart--before {
+        width: auto;
+        display: inline-block;
         position: absolute;
-        right: 2rem;
-        bottom: 1.2rem;
+        z-index: 1;
+        top: 13rem;
+        right: 1rem;
+        border: none;
     }
 
-    &__icon--after {
+    &__icon-heart--after {
+        width: auto;
+        color: transparent;
+        display: inline-block;
         position: absolute;
-        right: 2rem;
-        bottom: 1.2rem;
+        z-index: auto;
+        top: 13rem;
+        right: 1rem;
+        border: none;
+    }
+
+    &__icon-heart--before:hover {
+        display: none;
+    }
+
+    &__icon-heart--after:hover {
+        color: $colour-secondary;
+        z-index: 1;
     }
 }
