--- a/main.css
+++ b/main.css
@@ -78,7 +78,7 @@ body {
   box-shadow: 0.125rem 0.125rem 0.5rem #c7c3c3;
   transform: scale(1);
   transition: all 300ms;
-  transition: transform 500ms ease-in-out;
+  transition: transform 300ms ease-in-out;
 }
 .button__style:hover {
   transform: scale(1.2, 1.1);
@@ -93,6 +93,7 @@ body {
   right: 1rem;
 }
 .btn__new {
+  color: #278870;
   width: 90%;
   height: auto;
   margin: 1rem 1rem 1rem 1rem;
@@ -174,6 +175,7 @@ main {
   margin: 1rem 0 1rem 0;
   box-shadow: 0.125rem 0.125rem 0.5rem #c7c3c3;
   font-weight: 700;
+  cursor: pointer;
 }
 .functioning__explain:hover {
   background-color: lightgrey;
