--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -2,8 +2,10 @@
     position: absolute;
     top: 0.5rem;
     right: 1rem;
-
+  
     &__new {
+      
+        @include text-color;
         width: 90%;
         height: auto;
         margin: $margin-elements;
@@ -12,6 +14,6 @@
         cursor: pointer;
         height: 2rem;
         border-radius: 0.188rem 0.188rem 0.188rem 0.188rem;
-        border: none;
+        border: none;   
     }
 }
