--- a/sass/pages/_home_page.scss
+++ b/sass/pages/_home_page.scss
@@ -66,6 +66,7 @@ main {
         margin: 1rem 0 1rem 0;
         @include initial-shadow-element;
         font-weight: 700;
+        cursor: pointer;
     }
 
     &__explain:hover {
