--- a/main.css
+++ b/main.css
@@ -105,6 +105,50 @@ body {
   border: none;
 }
 
+.loader {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  background-color: #99E2D0;
+  animation: opacity 3000ms 3000ms both;
+}
+.loader__heading {
+  font-family: "Shrikhand", sans-serif;
+  font-size: 3rem;
+  font-weight: 900;
+  color: #9356DC;
+  animation: loader 2000ms 1000ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
+}
+
+@keyframes loader {
+  0% {
+    transform: scaleY(0.1);
+  }
+  10% {
+    transform: scaleY(0.2);
+  }
+  35% {
+    transform: scaleY(0.7);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
+@keyframes opacity {
+  0% {
+    opacity: 1;
+    z-index: 2;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
+}
 .logo {
   font-size: 2rem;
   text-align: center;
