--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 
 @import "./components/button";
 @import "./components/btn";
+@import "./components/loader";
 
 @import "./layout/header";
 @import "./layout/container";
