--- a/main.css
+++ b/main.css
@@ -77,10 +77,18 @@ body {
   border: none;
   box-shadow: 0.125rem 0.125rem 0.5rem #c7c3c3;
   transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
   transition: all 300ms;
   transition: transform 300ms ease-in-out;
+  -webkit-transition: transform 300ms ease-in-out;
+  -moz-transition: transform 300ms ease-in-out;
+  -ms-transition: transform 300ms ease-in-out;
+  -o-transition: transform 300ms ease-in-out;
 }
-.button__style:hover {
+.button:hover {
   transform: scale(1.2, 1.1);
   opacity: 0.9;
   background: linear-gradient(to top, #9356DC, #FF79DA);
@@ -116,6 +124,7 @@ body {
   top: 0;
   background-color: #99E2D0;
   animation: opacity 3000ms 3000ms both;
+  -webkit-animation: opacity 3000ms 3000ms both;
 }
 .loader__heading {
   font-family: "Shrikhand", sans-serif;
@@ -123,20 +132,37 @@ body {
   font-weight: 900;
   color: #9356DC;
   animation: loader 2000ms 1000ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
+  -webkit-animation: loader 2000ms 1000ms cubic-bezier(0.2, 0.4, 0.2, 5) infinite;
 }
 
 @keyframes loader {
   0% {
     transform: scaleY(0.1);
+    -webkit-transform: scaleY(0.1);
+    -moz-transform: scaleY(0.1);
+    -ms-transform: scaleY(0.1);
+    -o-transform: scaleY(0.1);
   }
   10% {
     transform: scaleY(0.2);
+    -webkit-transform: scaleY(0.2);
+    -moz-transform: scaleY(0.2);
+    -ms-transform: scaleY(0.2);
+    -o-transform: scaleY(0.2);
   }
   35% {
     transform: scaleY(0.7);
+    -webkit-transform: scaleY(0.7);
+    -moz-transform: scaleY(0.7);
+    -ms-transform: scaleY(0.7);
+    -o-transform: scaleY(0.7);
   }
   100% {
     transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+    -moz-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    -o-transform: scaleY(1);
   }
 }
 @keyframes opacity {
