--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -14,15 +14,23 @@
         border: none;
         @include initial-shadow-element;
         transform: scale(1);
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
         transition: all 300ms;
         transition: transform 300ms ease-in-out;
+        -webkit-transition: transform 300ms ease-in-out;
+        -moz-transition: transform 300ms ease-in-out;
+        -ms-transition: transform 300ms ease-in-out;
+        -o-transition: transform 300ms ease-in-out;
+    }
 
-        &:hover {
-            transform: scale(1.2, 1.1);
-            opacity: 0.9;   
-            background: linear-gradient(to top, $colour-primary, $colour-secondary);
-            @include initial-shadow-element (0.2rem);
-        }
+    &:hover {
+        transform: scale(1.2, 1.1);
+        opacity: 0.9;
+        background: linear-gradient(to top, $colour-primary, $colour-secondary);
+        @include initial-shadow-element (0.2rem);
     }
 
 }
