--- a/sass/components/loader.scss
+++ b/sass/components/loader.scss
@@ -1,5 +1,4 @@
 .loader {
-
     width: 100%;
     height: 100%;
     display: flex;
@@ -10,6 +9,7 @@
     top: 0;
     background-color: $colour-tertiary;
     animation: opacity 3000ms 3000ms both;
+    -webkit-animation: opacity 3000ms 3000ms both;
 
     &__heading {
         font-family: 'Shrikhand', sans-serif;
@@ -17,25 +17,42 @@
         font-weight: 900;
         color: $colour-primary;
         animation: loader 2000ms 1000ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
+        -webkit-animation: loader 2000ms 1000ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
     }
 }
 
 @keyframes loader {
     0% {
         transform: scaleY(0.1);
-    }
+        -webkit-transform: scaleY(0.1);
+        -moz-transform: scaleY(0.1);
+        -ms-transform: scaleY(0.1);
+        -o-transform: scaleY(0.1);
+}
 
     10% {
         transform: scaleY(0.2);
-    }
+        -webkit-transform: scaleY(0.2);
+        -moz-transform: scaleY(0.2);
+        -ms-transform: scaleY(0.2);
+        -o-transform: scaleY(0.2);
+}
 
     35% {
         transform: scaleY(0.7);
-    }
+        -webkit-transform: scaleY(0.7);
+        -moz-transform: scaleY(0.7);
+        -ms-transform: scaleY(0.7);
+        -o-transform: scaleY(0.7);
+}
 
     100% {
         transform: scaleY(1.0);
-    }
+        -webkit-transform: scaleY(1.0);
+        -moz-transform: scaleY(1.0);
+        -ms-transform: scaleY(1.0);
+        -o-transform: scaleY(1.0);
+}
 }
 
 @keyframes opacity {
