-modifications de home_page.html : suppression de la div de "button", changement des tag button en div pour les icones "heart", title et mailto rajoutés dans le footer, -changement dans typography.scss : nav logo déplacé dans nav.scss et ajout du font h3, - dans btn.scss, modication de la  largeur et décalage du bouton; -dans button.scss : suppression du sélecteur "style", ajout des préfixes et modifications des dimensions du bouton, -dans nav.scss : ajout de font family; -dans html.scss : ajout de la couleur blanche pour les nombres, modification de flex et des padding, gap et couleur de background dans "container-restaurant", modifications de padding de "heading", de margin dans "restaurant", de la hauteur et padding du footer des cartes, du positionnement des icones "heart" avec ajout d'un curseur spécifique: -dans variables.scss : changement des couleurs de coulor-quartery et couleur-shadow;

--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -11,6 +11,7 @@ footer {
     &__logo {
         margin: 1rem 0 1rem 0;
         font-weight: 300;
+        font-family: 'Shrikhand', 'Roboto', sans-serif;
     }
 
     &__link-icon {
