--- a/main.css
+++ b/main.css
@@ -57,25 +57,28 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-.nav__logo {
-  font-family: "Shrikhand", "Roboto", sans-serif;
+h3 {
+  font-weight: 700;
 }
 
 .button {
   display: inline-block;
-  width: auto;
-  margin: 1rem 1rem 1rem 1rem;
-}
-.button__style {
+  width: 70%;
+  text-align: center;
   font-size: 1rem;
   color: white;
-  padding: 1rem 1rem 1rem 1rem;
-  background: linear-gradient(to bottom, #9356DC, #FF79DA);
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+  margin: 1rem 0 1 rem 0;
   cursor: pointer;
-  height: 3rem;
+  height: 3.5rem;
   border-radius: 45px 45px;
+  -webkit-border-radius: 45px 45px;
+  -moz-border-radius: 45px 45px;
+  -ms-border-radius: 45px 45px;
+  -o-border-radius: 45px 45px;
   border: none;
-  box-shadow: 0.125rem 0.125rem 0.5rem #c7c3c3;
+  background: linear-gradient(to top, #9356DC, #FF79DA);
+  box-shadow: 0.125rem 0.125rem 0.5rem #f1eaea;
   transform: scale(1);
   -webkit-transform: scale(1);
   -moz-transform: scale(1);
@@ -90,19 +93,19 @@ body {
 }
 .button:hover {
   transform: scale(1.2, 1.1);
+  background: linear-gradient(to bottom, #9356DC, #FF79DA);
+  box-shadow: 0.2rem 0.5rem #f1eaea;
   opacity: 0.9;
-  background: linear-gradient(to top, #9356DC, #FF79DA);
-  box-shadow: 0.2rem 0.5rem #c7c3c3;
 }
 
 .btn {
   position: absolute;
   top: 0.5rem;
-  right: 1rem;
+  right: 2rem;
 }
 .btn__new {
   color: #278870;
-  width: 90%;
+  width: 80%;
   height: auto;
   margin: 1rem 1rem 1rem 1rem;
   font-size: 1rem;
@@ -192,9 +195,11 @@ main {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: auto;
+  height: 20rem;
   text-align: center;
+  align-items: center;
   margin-bottom: 5rem;
+  background-color: rgba(7, 15, 56, 0.03);
 }
 .presentation__location {
   width: 100%;
@@ -208,14 +213,16 @@ main {
   font-weight: 700;
   background-color: rgb(252, 246, 246);
   border-top: solid 2px rgba(160, 157, 157, 0.849);
-  box-shadow: 0 1rem 2rem rgb(187, 183, 183) inset, 0 5px 5px rgb(187, 183, 183) inset;
+  box-shadow: inset 0 0.2em rgba(7, 15, 56, 0.07);
+  background-color: rgba(7, 15, 56, 0.03);
 }
 .presentation__heading {
   font-weight: 900;
   font-size: 1.6rem;
+  margin: 1rem 2.5rem 0.5rem 2.5rem;
 }
 .presentation__discover {
-  margin: 1rem 1rem 1rem 1rem;
+  margin: 0.5rem 1.5rem 1rem 1.5rem;
   font-size: 1.2em;
   font-weight: 300;
 }
@@ -243,12 +250,12 @@ main {
   align-items: center;
   gap: 1rem;
   margin: 1rem 0 1rem 0;
-  box-shadow: 0.125rem 0.125rem 0.5rem #c7c3c3;
+  box-shadow: 0.125rem 0.125rem 0.5rem #f1eaea;
   font-weight: 700;
   cursor: pointer;
 }
 .functioning__explain:hover {
-  background-color: lightgrey;
+  background-color: rgba(7, 15, 56, 0.03);
 }
 .functioning__explain .number {
   display: inline-block;
@@ -263,6 +270,7 @@ main {
   border-radius: 50%;
   text-align: center;
   font-weight: 700;
+  color: white;
 }
 .functioning__explain .fa-solid {
   position: relative;
@@ -277,15 +285,17 @@ main {
 .container-restaurant {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   width: auto;
   height: auto;
-  margin: 1rem 1rem 4rem 1rem;
-  gap: 2rem;
+  gap: 1rem;
+  background-color: rgba(7, 15, 56, 0.03);
+  padding-bottom: 4rem;
 }
 .container-restaurant__heading {
   width: 100%;
   height: auto;
+  padding: 2rem 1rem 0 1rem;
 }
 
 .restaurant {
@@ -293,14 +303,14 @@ main {
   width: auto;
   height: 250px;
   border-radius: 1.25rem 1.25rem 1.25rem 1.25rem;
-  margin-bottom: 1rem;
+  margin: 0 1rem 1rem 1rem;
   transform: scale(1);
   transition: all 300ms;
   transition: transform 100ms ease-in-out;
 }
 .restaurant:hover {
   transform: scale(1.02);
-  box-shadow: 0.125rem 0.125rem 0.5rem #c7c3c3;
+  box-shadow: 0.125rem 0.125rem 0.5rem #f1eaea;
 }
 .restaurant__link {
   display: inline-block;
@@ -314,7 +324,7 @@ main {
   width: 100%;
   height: 100%;
   border-radius: 1.25rem 1.25rem 1.25rem 1.25rem;
-  box-shadow: 0.125rem 0.125rem 0.5rem #c7c3c3;
+  box-shadow: 0.125rem 0.125rem 0.5rem #f1eaea;
 }
 .restaurant__container-img {
   border-radius: 20px 20px 0 0;
@@ -330,8 +340,11 @@ main {
 }
 .restaurant__footer {
   width: 100%;
-  height: 50px;
+  height: 3.75rem;
   border-radius: 0 0 20px 20px;
+}
+.restaurant__footer h3, .restaurant p {
+  padding: 0.2rem 0 0.2rem 1rem;
 }
 .restaurant__icon-heart--before {
   width: auto;
@@ -339,7 +352,7 @@ main {
   position: absolute;
   z-index: 1;
   top: 13rem;
-  right: 1rem;
+  right: 2rem;
   border: none;
 }
 .restaurant__icon-heart--after {
@@ -349,19 +362,20 @@ main {
   position: absolute;
   z-index: auto;
   top: 13rem;
-  right: 1rem;
+  right: 2rem;
   border: none;
 }
 .restaurant__icon-heart--before:hover {
   display: none;
 }
 .restaurant__icon-heart--after:hover {
-  color: #FF79DA;
-  z-index: 1;
+  color: #9356DC;
+  z-index: 2;
+  cursor: grab;
 }
 
 footer {
-  background-color: rgba(24, 23, 23, 0.863);
+  background-color: rgba(65, 60, 60, 0.863);
   padding: 1rem 0 1rem 0;
 }
 
@@ -373,6 +387,7 @@ footer {
 .nav__logo {
   margin: 1rem 0 1rem 0;
   font-weight: 300;
+  font-family: "Shrikhand", "Roboto", sans-serif;
 }
 .nav__link-icon {
   display: inline-block;
