--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,6 +2,7 @@ body{
     font-family:'Roboto', sans-serif;
 }
 
-.nav__logo{
-    font-family: 'Shrikhand', 'Roboto', sans-serif;
+
+h3 {
+    font-weight: 700;
 }
