--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,36 +1,38 @@
 .button {
     display: inline-block;
-    width: auto;
-    margin: $margin-elements;
-
-    &__style {
-        font-size: 1rem;
-        color: $colour-text;
-        padding: 1rem 1rem 1rem 1rem;
-        background: linear-gradient(to bottom, $colour-primary, $colour-secondary);
-        cursor: pointer;
-        height: 3rem;
-        border-radius: 45px 45px;
-        border: none;
-        @include initial-shadow-element;
-        transform: scale(1);
-        -webkit-transform: scale(1);
-        -moz-transform: scale(1);
-        -ms-transform: scale(1);
-        -o-transform: scale(1);
-        transition: all 300ms;
-        transition: transform 300ms ease-in-out;
-        -webkit-transition: transform 300ms ease-in-out;
-        -moz-transition: transform 300ms ease-in-out;
-        -ms-transition: transform 300ms ease-in-out;
-        -o-transition: transform 300ms ease-in-out;
-    }
+    width: 70%;
+    text-align: center;
+    font-size: 1rem;
+    color: $colour-text;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem; 
+    margin: 1rem 0 1 rem 0;
+    cursor: pointer;
+    height: 3.5rem;
+    border-radius: 45px 45px; 
+     -webkit-border-radius: 45px 45px;
+    -moz-border-radius: 45px 45px;
+    -ms-border-radius: 45px 45px;
+    -o-border-radius: 45px 45px;
+    border: none;
+    background: linear-gradient(to top, $colour-primary, $colour-secondary);
+    @include initial-shadow-element;
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transition: all 300ms;
+    transition: transform 300ms ease-in-out;
+    -webkit-transition: transform 300ms ease-in-out;
+    -moz-transition: transform 300ms ease-in-out;
+    -ms-transition: transform 300ms ease-in-out;
+    -o-transition: transform 300ms ease-in-out;
 
     &:hover {
         transform: scale(1.2, 1.1);
-        opacity: 0.9;
-        background: linear-gradient(to top, $colour-primary, $colour-secondary);
+        background: linear-gradient(to bottom, $colour-primary, $colour-secondary);
         @include initial-shadow-element (0.2rem);
+        opacity: 0.9;
     }
 
 }
