--- a/sass/pages/_home_page.scss
+++ b/sass/pages/_home_page.scss
@@ -8,9 +8,12 @@ main {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: auto;
+    height: 20rem;
     text-align: center;
+    align-items: center;
     margin-bottom: 5rem;
+    background-color: rgba(7, 15, 56, 0.03);
+     
 
     &__location {
         width: 100%;
@@ -24,16 +27,18 @@ main {
         font-weight: 700;
         background-color: rgb(252, 246, 246);
         border-top: solid 2px rgba(160, 157, 157, 0.849);
-        box-shadow: 0 1rem 2rem rgb(187, 183, 183) inset, 0 5px 5px rgb(187, 183, 183) inset;
+        box-shadow: inset 0 0.2em rgba(7, 15, 56, 0.07);
+        background-color: rgba(7, 15, 56, 0.03);
     }
 
     &__heading {
         font-weight: 900;
         font-size: 1.6rem;
-    }
+        margin: 1rem 2.5rem 0.5rem 2.5rem;
+    }  
 
     &__discover {
-        margin: $margin-elements;
+        margin: 0.5rem 1.5rem 1rem 1.5rem;
         font-size: 1.2em;
         font-weight: 300;
     }
@@ -70,7 +75,7 @@ main {
     }
 
     &__explain:hover {
-        background-color: lightgrey;
+        background-color: rgba(7, 15, 56, 0.03);
     }
 
     &__explain .number {
@@ -86,6 +91,7 @@ main {
         border-radius: 50%;
         text-align: center;
         font-weight: 700;
+        color: $colour-text;
     }
 
     &__explain .fa-solid {
@@ -103,15 +109,17 @@ main {
 .container-restaurant {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     width: auto;
     height: auto;
-    margin: 1rem 1rem 4rem 1rem;
-    gap: 2rem;
+    gap: 1rem;
+    background-color: rgba(7, 15, 56, 0.03);
+    padding-bottom:4rem;
 
     &__heading {
         width: 100%;
         height: auto;
+        padding : 2rem 1rem 0 1rem;
     }
 }
 
@@ -120,10 +128,11 @@ main {
     width: auto;
     height: 250px;
     border-radius: $border-card;
-    margin-bottom: 1rem;
+    margin: 0 1rem 1rem 1rem;
     transform: scale(1);
     transition: all 300ms;
     transition: transform 100ms ease-in-out;
+   
 
     &:hover {
         transform: scale(1.02);
@@ -162,9 +171,11 @@ main {
 
     &__footer {
         width: 100%;
-        height: 50px;
+        height: 3.75rem;
         border-radius: 0 0 20px 20px;
     }
+    &__footer h3, p {
+padding : 0.2rem 0 0.2rem 1rem;}
 
     &__icon-heart--before {
         width: auto;
@@ -172,7 +183,7 @@ main {
         position: absolute;
         z-index: 1;
         top: 13rem;
-        right: 1rem;
+        right: 2rem;
         border: none;
     }
 
@@ -183,7 +194,7 @@ main {
         position: absolute;
         z-index: auto;
         top: 13rem;
-        right: 1rem;
+        right: 2rem;
         border: none;
     }
 
@@ -192,7 +203,8 @@ main {
     }
 
     &__icon-heart--after:hover {
-        color: $colour-secondary;
-        z-index: 1;
+        color: $colour-primary;
+        z-index: 2;
+        cursor:grab;
     }
 }
