--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,11 +1,11 @@
 $colour-primary : #9356DC;
 $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
-$colour-quartery:rgba(24, 23, 23, 0.863);
+$colour-quartery:rgba(65, 60, 60, 0.863);
 $colour-text :white;
 $shadow-size: 0.125rem 0.125rem;
 $shadow-blur-effect: 0.5rem;
-$colour-shadow: #c7c3c3;
+$colour-shadow: #f1eaea;
 $margin-elements : 1rem 1rem 1rem 1rem;
 $border-selector: 0.938rem 0.938rem 0.938rem 0.938rem;
 $border-card : 1.25rem 1.25rem 1.25rem 1.25rem;
