--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,6 +1,14 @@
 footer {
+    width: auto;
+    height:auto;
     background-color: $colour-quartery;
     padding: 1rem 0 1rem 0;
+
+    @include tablette-only {
+        display: flex;
+        justify-content: space-around;
+        height:auto;
+    }
 }
 
 .nav {
@@ -8,10 +16,26 @@ footer {
     margin: $margin-elements;
     line-height: 2rem;
 
+    &__container{
+
+    @include tablette-only {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        align-items: center;
+
+    }
+}
+
     &__logo {
         margin: 1rem 0 1rem 0;
         font-weight: 300;
         font-family: 'Shrikhand', 'Roboto', sans-serif;
+        @include tablette-only {
+            display: flex;
+            justify-content: center;
+  align-items: center;
+        }
     }
 
     &__link-icon {
@@ -21,6 +45,7 @@ footer {
         right: 0.5rem;
         line-height: 1rem;
         padding: 0 1rem 0 1rem;
+         
     }
 
     &__link-icon .fa-utensils {
@@ -35,7 +60,10 @@ footer {
 
     &__link--color {
         color: white;
-    }
+
+        @include tablette-only {
+            margin: $margin-elements;
+    }}
 
     &__link--color:hover {
         color: $colour-secondary;
