--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -6,3 +6,10 @@ body{
 h3 {
     font-weight: 700;
 }
+
+h2{
+    font-size: 1.6rem;
+    @include tablette-only {
+        font-size: 1.2rem;
+    }
+}
