--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -4,18 +4,18 @@
     text-align: center;
     font-size: 1rem;
     color: $colour-text;
-    padding: 0.5rem 0.5rem 0.5rem 0.5rem; 
-    margin: 1rem 0 1 rem 0;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+    margin: 1rem 0 4rem 0;
     cursor: pointer;
     height: 3.5rem;
-    border-radius: 45px 45px; 
-     -webkit-border-radius: 45px 45px;
+    border-radius: 45px 45px;
+    -webkit-border-radius: 45px 45px;
     -moz-border-radius: 45px 45px;
     -ms-border-radius: 45px 45px;
     -o-border-radius: 45px 45px;
     border: none;
     background: linear-gradient(to top, $colour-primary, $colour-secondary);
-    @include initial-shadow-element;
+    @include initial-shadow-element (0.2rem);
     transform: scale(1);
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
@@ -28,11 +28,16 @@
     -ms-transition: transform 300ms ease-in-out;
     -o-transition: transform 300ms ease-in-out;
 
+    @include tablette-only {
+        width: 30%;
+    }
+
     &:hover {
         transform: scale(1.2, 1.1);
         background: linear-gradient(to bottom, $colour-primary, $colour-secondary);
-        @include initial-shadow-element (0.2rem);
-        opacity: 0.9;
-    }
+        filter: brightness(1.2);
+        -webkit-filter: brightness(1.2);
+     
+}
 
 }
