--- a/sass/components/loader.scss
+++ b/sass/components/loader.scss
@@ -3,6 +3,7 @@
     height: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     position: fixed;
@@ -13,8 +14,9 @@
 
     &__heading {
         font-family: 'Shrikhand', sans-serif;
-        font-size: 3rem;
+        font-size: 4rem;
         font-weight: 900;
+        margin: 1rem;
         color: $colour-primary;
         animation: loader 2000ms 1000ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
         -webkit-animation: loader 2000ms 1000ms cubic-bezier(0.2, 0.4, 0.2, 05) infinite;
@@ -28,7 +30,7 @@
         -moz-transform: scaleY(0.1);
         -ms-transform: scaleY(0.1);
         -o-transform: scaleY(0.1);
-}
+    }
 
     10% {
         transform: scaleY(0.2);
@@ -36,7 +38,7 @@
         -moz-transform: scaleY(0.2);
         -ms-transform: scaleY(0.2);
         -o-transform: scaleY(0.2);
-}
+    }
 
     35% {
         transform: scaleY(0.7);
@@ -44,7 +46,7 @@
         -moz-transform: scaleY(0.7);
         -ms-transform: scaleY(0.7);
         -o-transform: scaleY(0.7);
-}
+    }
 
     100% {
         transform: scaleY(1.0);
@@ -52,13 +54,13 @@
         -moz-transform: scaleY(1.0);
         -ms-transform: scaleY(1.0);
         -o-transform: scaleY(1.0);
-}
+    }
 }
 
 @keyframes opacity {
     0% {
         opacity: 1;
-        z-index: 2;
+        z-index: 1;
     }
 
     100% {
