-changements dans home-page.html : ajout de la class home-main-container pour différencier le main du html des menus et modification du nom des liens vers les menus pour tenir compte de leur nouveau nom de fichier; -modification des noms de fichiers html  des menus ;  insertion de l'icone et du logo dans le header de chacun de ces fic hiers; -indication du nouveau sélecteur pour le main de home_page.html; - dans menu.scss. : insertion des éléments de style du header pour les pages html des menus.

--- a/main.css
+++ b/main.css
@@ -287,19 +287,19 @@ h2 {
   }
 }
 
-main {
+.home-main-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 @media all and (min-width: 767px) {
-  main {
+  .home-main-container {
     flex-wrap: wrap;
     flex-direction: row;
   }
 }
 @media all and (min-width: 992px) {
-  main {
+  .home-main-container {
     flex-direction: column;
   }
 }
@@ -598,6 +598,18 @@ main {
   background-color: #9356DC;
   filter: brightness(1.5);
   -webkit-filter: brightness(1.5);
+}
+
+.header-menu {
+  display: flex;
+  align-items: center;
+}
+.header-menu__return {
+  margin: 2rem;
+  font-size: 1.5rem;
+}
+.header-menu__logo {
+  text-align: center;
 }
 
 footer {
